<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/byName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/byName" />

        <Button
            android:id="@+id/byAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/byAuthor" />

        <Button
            android:id="@+id/byPublisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/byPublisher" />

        <TextView
            android:id="@+id/recordCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Black" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp" >

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableLayout
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </HorizontalScrollView>
    </ScrollView>

</LinearLayout>